Fix z-index

--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -66,7 +66,7 @@ a{
   
 }
 .close{
-  z-index: 10;
+  z-index: -10;
   position: absolute;
   display:  flex;
   width: 100vw;
